# OpenGL-Collection

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  renderdoc.cap
res/objects/backpack/: backpack.mtl
res/objects/galaxy/: The_Galaxy_low_M_Brooch_Normal.1001.tx  The_Galaxy_low_M_Cloak_Normal.1001.tx  The_Galaxy_low_M_Cloak_Roughness.1001.tx  The_Galaxy_low_M_Jewelry_Normal.1001.tx  The_Galaxy_low_M_Nebula_Height.1001.tx  The_Galaxy_low_M_Nebula_Height.1002.tx  The_Galaxy_low_M_Nebula_Height.1003.tx  The_Galaxy_low_M_Nebula_Height.1004.tx  The_Galaxy_low_M_Nebula_Height.1011.tx  The_Galaxy_low_M_Nebula_Height.1012.tx  The_Galaxy_low_M_Nebula_Height.1013.tx  The_Galaxy_low_M_Nebula_Height.1014.tx  The_Galaxy_low_M_Nebula_Roughness.1001.tx  The_Galaxy_low_M_Nebula_Roughness.1002.tx  The_Galaxy_low_M_Nebula_Roughness.1003.tx  The_Galaxy_low_M_Nebula_Roughness.1011.tx  The_Galaxy_low_M_Nebula_Roughness.1012.tx  The_Galaxy_low_M_Nebula_Roughness.1013.tx  The_Galaxy_low_M_Nebula_Roughness.1014.tx  galaxy.mtl
res/objects/icosphere/: icosphere.mtl
res/shaders/: 5.1.framebuffers.vs  5.1.framebuffers_screen.vs  AdvancedLighting.shader  Antialiasing.shader  AntialiasingScreen.shader  Basic.shader  BasicDirectionalLighting.shader  BasicLighting.shader  BasicPointLighting.shader  BasicSpotlight.shader  Blending.shader  Bloom.shader  BloomFinal.shader  BloomLightBox.shader  Blur.shader  CoordinateSystem.shader  Cubemaps.shader  Default.shader  DeferredLightBox.shader  DeferredShading.shader  EquirectangularToCubemap.shader  Explode.shader  FaceCulling.shader  Flat.shader  Framebuffers.shader  GBuffer.shader  GammaCorrection.shader  Gouraud.shader  Hdr.shader  HdrLighting.shader  House.shader  IBL.shader  IBLTextured.shader  Instancing.shader  InstancingAsteriods.shader  Irradiance.shader  Light.shader  Lights.Shader  ModelLoading.shader  Normal.shader  (+22 more)
res/shaders/OIT/: Background.shader  Composite.shader  Irradiance.shader  PBR.shader  PBRTransparent.shader  Screen.shader  Solid.shader  Transparent.shader
res/shaders/SpecularIBL/: Prefilter.shader
src/learnOpenGL/: Application.cpp  Constants.h  Renderer.cpp  Renderer.h
src/learnOpenGL/core/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  Camera.h  CameraController.cpp  CameraController.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Lights.cpp  Lights.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.h  NodeAnim.cpp  NodeAnim.h  ObjectManager.cpp  ObjectManager.h  Renderbuffer.h  SceneData.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  renderbuffer.cpp
src/learnOpenGL/scene/: AdvancedGLSL.cpp  AdvancedGLSL.h  AdvancedLighting.cpp  AdvancedLighting.h  Antialiasing.cpp  Antialiasing.h  BasicLighting.cpp  BasicLighting.h  Blending.cpp  Blending.h  Bloom.cpp  Bloom.h  ClearColor.cpp  ClearColor.h  CoordinateSystem.cpp  CoordinateSystem.h  Cubemaps.cpp  Cubemaps.h  DeferredShading.cpp  DeferredShading.h  DiffuseIrradiance.cpp  DiffuseIrradiance.h  FaceCulling.cpp  FaceCulling.h  Framebuffers.cpp  (+35 more)
(+27 files in other folders)
